<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.audiobalance.MainActivity" >

    <CheckBox
        style="@style/DefaultText"
        android:id="@+id/checkbox_developer_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="Enable Developer Mode" />

    <TextView
        style="@style/DefaultText"
        android:id="@+id/textview_versiontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/versionstring"
        />

    <Button
        android:id="@+id/button_calibration_frequency_skip"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textview_versiontext"
        android:layout_marginTop="25dp"
        android:onClick="openAudioSelector"
        android:text="@string/button_listen" />

    <Button
        android:id="@+id/button2"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_calibration_frequency_skip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="openCalibrationActivity"
        android:text="@string/button_calibrate" />

    <Button
        android:id="@+id/button_open_developer_dashboard"
        style="@style/DefaultButton"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:layout_marginTop="25dp"
        android:onClick="openDevDashboard"
        android:text="Developer Dashboard" />

    <TextView
        style="@style/CaptionFont"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/app_title"
         />

    <Button
        android:id="@+id/button_main_volumetester"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_open_developer_dashboard"
        android:layout_centerHorizontal="true"
        android:onClick="openVolumeTester"
        android:text="Volume Tester" />

</RelativeLayout>
